Converted from sbt-pgp to sbt-gpg

--- a/.gitignore
+++ b/.gitignore
@@ -9,13 +9,10 @@ tags
 /scripts/checkAndAutoMerge
 /scripts/commonSetup
 /credentials.bintray.enc
-/credentials.sonatype.enc
 /scripts/discordTravisPost
 /scripts/isRevision
 /scripts/listLabels
 /scripts/closePR
-/pgppassphrase.sbt.enc
 /scripts/publishAndTag
-/pubring.pgp.enc
 /scripts/readVersion
-/secring.pgp.enc
+/signing-secret.gpg.enc
